# My-Awesome-PIMS

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
android/app/: build.gradle.kts
backend/: .coverage  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  note.py  note_tag.py  tag.py
backend/app/repositories/: note_repo.py  tag_repo.py
backend/app/schemas/: note.py  tag.py
backend/app/services/: note_service.py  tag_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_notes_api.py  test_tags_api.py
backend/tests/test_repositories/: test_note_repo.py  test_tag_repo.py
backend/tests/test_services/: test_note_service.py  test_tag_service.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: note.dart  tag.dart
lib/screens/: compose_screen.dart  note_detail_screen.dart  note_list_screen.dart  search_screen.dart
lib/services/: note_api_service.dart
lib/widgets/: tag_colors.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/models/: models_test.dart
test/screens/: screens_test.dart
test/services/: note_api_service_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
